<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_display_item"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_alignParentTop="true"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:descendantFocusability="blocksDescendants">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/container_left_display_item"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/icon_small_width"
            android:layout_height="@dimen/icon_small_height"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:clickable="false"
            android:contentDescription="@string/string_row_left_image"
            android:src="@drawable/plus"
            android:layout_gravity="center"
            android:id="@+id/image_left_display_item" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image_left_display_item"
            android:layout_marginTop="0dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="4dp"
            android:paddingBottom="6dp"
            android:background="@drawable/a_box_display_msg_green_fill_solid"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:text="@string/string_loading"
            android:gravity="start|center_vertical"
            android:id="@+id/textview_left_display"/>
        <ImageView
            android:layout_width="@dimen/icon_tiny_width"
            android:layout_height="@dimen/icon_tiny_width"
            android:layout_toEndOf="@+id/textview_left_display"
            android:layout_marginTop="3dp"
            android:clickable="false"
            android:contentDescription="@string/string_row_left_image"
            android:src="@drawable/plus"
            android:layout_gravity="center"
            android:id="@+id/image_left_flag" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image_left_flag"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:textSize="12sp"
            android:text="@string/string_loading"
            android:id="@+id/textview_left_time"/>
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/container_right_display_item"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/image_right_flag"
            android:layout_marginTop="5dp"
            android:gravity="end|center_vertical"
            android:singleLine="true"
            android:textSize="12sp"
            android:text="@string/string_loading"
            android:id="@+id/textview_right_time"/>
        <ImageView
            android:layout_width="@dimen/icon_tiny_width"
            android:layout_height="@dimen/icon_tiny_width"
            android:layout_toStartOf="@+id/textview_right_display"
            android:layout_marginTop="3dp"
            android:clickable="false"
            android:contentDescription="@string/string_row_left_image"
            android:src="@drawable/plus"
            android:layout_gravity="center"
            android:id="@+id/image_right_flag" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/image_right_display_item"
            android:layout_marginTop="0dp"
            android:layout_marginStart="5dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="4dp"
            android:paddingBottom="6dp"
            android:background="@drawable/a_box_display_msg_gray_fill_solid"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/string_loading"
            android:gravity="end|center_vertical"
            android:id="@+id/textview_right_display"/>
        <ImageView
            android:layout_width="@dimen/icon_small_width"
            android:layout_height="@dimen/icon_small_height"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:clickable="false"
            android:contentDescription="@string/string_row_right_image"
            android:src="@drawable/plus"
            android:layout_gravity="center"
            android:id="@+id/image_right_display_item" />
    </RelativeLayout>
</RelativeLayout>